modal alignment for mobile view fix

--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -13,7 +13,6 @@
   top: 20vh;
   width: 72%;
   margin-left: 5px;
-  left: 8vw;
   background-color: white;
   padding: 1rem;
   max-width: 72%;
